zkay/examples/type_errors/FinalNoConstructor.zkay
pragma zkay >=0.2.0;

contract FinalNoConstructor {

	final uint x;

}
